Replace Guava collections with standard Java collections